@@ -59,11 +59,14 @@ has header => (
 
 The name of the change log. It defaults to "Changes".
 
+If it is set to an empty string, and L<Dist::Zilla::Plugin::NextRelease> is used, then it will use the
+C<update_filename> from that plugin.
+
 =cut
 
 has changelog => (
     is      => 'rw',
-    isa     => NonEmptySimpleStr,
+    isa     => SimpleStr,
     default => 'Changes',
 );
 
@@ -129,6 +132,20 @@ sub weave_section( $self, $document, $input ) {
 
     if ( my $stash = $zilla ? $zilla->stash_named('%PodWeaver') : undef ) {
         $stash->merge_stashed_config($self);
+    }
+
+    if ( my $next = first { $_->isa("Dist::Zilla::Plugin::NextRelease") } $zilla->plugins->@* ) {
+        my $filename = $next->update_filename;
+        if ( $self->changelog eq "" ) {
+            $self->changelog($filename);
+        }
+        elsif ( $self->changelog ne $filename ) {
+            $self->log_fatal("changelog is different file ${filename} used by NextRelease");
+        }
+    }
+
+    if ( $self->changelog eq "" ) {
+        $self->changelog("Changes");
     }
 
     my $file = first { $_->name eq $self->changelog } $zilla->files->@* or return;
@@ -229,6 +246,8 @@ __PACKAGE__->meta->make_immutable;
 =for Pod::Coverage weave_section
 
 =head1 SEE ALSO
+
+L<Dist::Zilla::Plugin::NextRelease>
 
 L<Pod::Weaver::Section::Changes>
 
